fix z-index in aesthetics3

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -317,6 +317,7 @@
   .bottom-right {
     grid-column: 2;
     grid-row: 2;
+    z-index: 1;
   }
 
   @media screen and (max-width: @size-md) {
